Formulario de inscripción

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<h2>¿Qué estás esperando?</h2>
 									<br>
 									<ul class="actions special">
-											<li><a href="#" class="button button-inscribir">¡Inscribí a tu equipo!</a></li>
+											<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdHwQKNwC_J-AaVRFlqmagYkW_EA3iS5-_ETVwAsQSjGFiRiQ/viewform" target="_blank" class="button button-inscribir">¡Inscribí a tu equipo!</a></li>
 									</ul>
 							</header>
 					</section>
