--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 							<h2>¿Qué es?</h2>
 							<p>
 								<b>Code Jam San Francisco</b> es una <b>Competencia de Programación</b> con formato similar al
-								<a href="torneoprogramacion.com.ar">TAP</a> o al <a href="https://icpc.baylor.edu/">ICPC</a>.
+								<a href="torneoprogramacion.com.ar">Torneo Argentino de Programación (TAP)</a> o al <a href="https://icpc.baylor.edu/">ICPC</a>.
 								
-								Consiste en resolver, en grupos de 3 estudiantes una conjunto de problemas computacionales
+								Consiste en resolver, en grupos de 3 estudiantes un conjunto de problemas computacionales
 								en el menor tiempo posible.
 							</p>
 						</header>
@@ -72,7 +72,7 @@
 							<section>
 								<span class="icon major fa-users accent2"></span>
 								<h3>¿A quiénes está dirigido?</h3>
-								<p>A estudiantes de nivel, secundario, superior o universitario de instituciones de la ciudad de San Fransico y la región</p>
+								<p>A estudiantes de nivel secundario, superior o universitario de instituciones de la ciudad de San Fransico y la región</p>
 							</section>
 							<section>
 								<span class="icon major fa-wrench accent2"></span>
