--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<h2>¿Qué es?</h2>
 							<p>
 								<b>Code Jam San Francisco</b> es una <b>Competencia de Programación</b> con formato similar al
-								<a href="torneoprogramacion.com.ar">Torneo Argentino de Programación (TAP)</a> o al <a href="https://icpc.baylor.edu/">ICPC</a>.
+								Torneo Argentino de Programación (TAP) o al ICPC.
 								
 								Consiste en resolver, en grupos de 3 estudiantes un conjunto de problemas computacionales
 								en el menor tiempo posible.
