--- a/emails/1/email.html
+++ b/emails/1/email.html
@@ -252,7 +252,7 @@
             <!-- Hero Image, Flush : BEGIN -->
             <tr>
                 <td style="background-color: #00c4cc; text-align:center;">
-                    <img src="narrow.png" width="600" height="" alt="alt_text" border="0" style="width: 100%; max-width: 400px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555; margin: auto;" class="g-img">
+                    <img src="https://github.com/codejamsanfrancisco/codejamsanfrancisco.github.io/raw/master/emails/1/narrow.png" width="600" height="" alt="alt_text" border="0" style="width: 100%; max-width: 400px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555; margin: auto;" class="g-img">
                 </td>
             </tr>
             <!-- Hero Image, Flush : END -->
@@ -292,7 +292,7 @@
 	                            <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
 	                                <tr>
 	                                    <td dir="ltr" valign="top" style="padding: 0 10px;">
-	                                        <img src="calender-2389150_640.png" width="170" height="170" alt="alt_text" border="0" class="center-on-narrow" style="border-radius: 50%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
+	                                        <img src="https://raw.githubusercontent.com/codejamsanfrancisco/codejamsanfrancisco.github.io/master/emails/1/img1.png" width="170" height="170" alt="alt_text" border="0" class="center-on-narrow" style="border-radius: 50%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
 	                                    </td>
 	                                </tr>
 	                            </table>
@@ -335,7 +335,7 @@
 	                            <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
 	                                <tr>
 	                                    <td dir="ltr" valign="top" style="padding: 0 10px;">
-	                                        <img src="team-3738261_640.jpg" width="170" height="170" alt="alt_text" border="0" class="center-on-narrow" style="border-radius: 50%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
+	                                        <img src="https://raw.githubusercontent.com/codejamsanfrancisco/codejamsanfrancisco.github.io/master/emails/1/img2.png" width="170" height="170" alt="alt_text" border="0" class="center-on-narrow" style="border-radius: 50%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
 	                                    </td>
 	                                </tr>
 	                            </table>
@@ -373,7 +373,7 @@
 	                            <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
 	                                <tr>
 	                                    <td dir="ltr" valign="top" style="padding: 0 10px;">
-	                                        <img src="calender-2389150_640.png" width="170" height="170" alt="alt_text" border="0" class="center-on-narrow" style="border-radius: 50%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
+	                                        <img src="https://raw.githubusercontent.com/codejamsanfrancisco/codejamsanfrancisco.github.io/master/emails/1/img1.png" width="170" height="170" alt="alt_text" border="0" class="center-on-narrow" style="border-radius: 50%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
 	                                    </td>
 	                                </tr>
 	                            </table>
