Corregido error menor

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<section>
 								<span class="icon major fa-users accent2"></span>
 								<h3>¿A quiénes está dirigido?</h3>
-								<p>A estudiantes de nivel secundario, superior o universitario de instituciones de la ciudad de San Fransico y la región</p>
+								<p>A estudiantes de nivel secundario, superior o universitario de instituciones de la ciudad de San Francisco y la región</p>
 							</section>
 							<section>
 								<span class="icon major fa-wrench accent2"></span>
