--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<section>
 								<span class="icon major fa-calendar accent2"></span>
 								<h3>¿Cuándo?</h3>
-								<p>El día martes 30 de noviembre, de 13:00 a 17:30 hs</p>
+								<p>El día jueves 29 de noviembre, de 13:00 a 17:30 hs</p>
 							</section>
 							<section>
 								<span class="icon major  fa-location-arrow accent2"></span>
