--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/toastr.min.css" />
-		<link rel="shortcut icon" href="favicon.png" /> 
+		<link rel="shortcut icon" href="favicon-link.ico" /> 
 	</head>
 	<body class="landing is-preload">
 		<div id="page-wrapper">
@@ -133,7 +133,19 @@
 						</div>
 						<div class="row">
 							<div class="col-12 col-12-mobilep">
-								<!---h3>Sponsors</h3 -->
+								<h3>Sponsors</h3>
+							</div>
+						</div>
+						<br>
+						<div class="row">
+							<div class="col-4 col-12-mobilep">
+								
+							</div>
+							<div class="sponsor col-4 col-12-mobilep">
+								<a href="https://www.memory-srl.com.ar/" target="_blank"><img class="image fit" src="images/logo_memory.png"></a>
+							</div>
+							<div class="col-4 col-12-mobilep">
+								
 							</div>
 						</div>
 					</section>
