--- a/index.html
+++ b/index.html
@@ -136,10 +136,9 @@
 								<h3>Sponsors</h3>
 							</div>
 						</div>
-						<br>
 						<div class="row">
-							<div class="col-4 col-12-mobilep">
-								
+							<div class="sponsor col-4 col-12-mobilep">
+								<a href="http://www.beepinformatica.com.ar/" target="_blank"><img class="image fit" src="images/logo_beep.png"></a>
 							</div>
 							<div class="sponsor col-4 col-12-mobilep">
 								<a href="https://www.memory-srl.com.ar/" target="_blank"><img class="image fit" src="images/logo_memory.png"></a>
