--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						</div>
 						<div class="row">
 							<div class="sponsor col-4 col-12-mobilep">
-								<a href="http://www.beepinformatica.com.ar/" target="_blank"><img class="image fit" src="images/logo_beep.png"></a>
+								<a href="https://www.facebook.com/beepinfo/" target="_blank"><img class="image fit" src="images/logo_beep.png"></a>
 							</div>
 							<div class="sponsor col-4 col-12-mobilep">
 								<a href="https://www.memory-srl.com.ar/" target="_blank"><img class="image fit" src="images/logo_memory.png"></a>
