--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 						<div class="row">
 							<div class="sponsor col-4 col-12-mobilep">
-								
+								<a href="" ><img class="image fit" src="images/steel_logo_small.png"></a>
 							</div>
 							<div class="sponsor col-4 col-12-mobilep">
 								<a href="https://www.facebook.com/burencomputacion/" target="_blank"><img class="image fit" src="images/buren.png"></a>
