--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<header class="major">
 					<h2>¿Qué es?</h2>
 					<p>
-						<b>Code Jam San Francisco</b> es una <b>Torneo de Programación</b> con formato similar al
+						<b>Code Jam San Francisco</b> es un <b>Torneo de Programación</b> con formato similar al
 						Torneo Argentino de Programación (TAP) o al ICPC.
 
 						Consiste en resolver, en grupos de 3 estudiantes un conjunto de problemas computacionales
