--- a/index.html
+++ b/index.html
@@ -220,6 +220,17 @@
 
 			<section class="box special">
 				<header class="major">
+					<div style="margin-bottom: 50px;">
+						<a href="https://www.facebook.com/codejamsanfco/" target="_blank" class="social_icon">
+							<img src="images/social_facebook.jpg">
+						</a>
+						<a href="https://www.instagram.com/codejamsf/" target="_blank" class="social_icon">
+							<img src="images/social_instagram.jpg">
+						</a>
+						<a href="https://twitter.com/CodeFrancisco" target="_blank" class="social_icon">
+							<img src="images/social_twitter.jpg">
+						</a>
+					</div>
 					<h4>¿Querés enterarte de las últimas novedades?</h4>
 					<form class="ajaxForm" action="https://formcarry.com/s/MsfSDoeOXkA" method="POST"
 						accept-charset="UTF-8">
