--- a/index.html
+++ b/index.html
@@ -150,34 +150,39 @@
 						<h3>Sponsors</h3>
 					</div>
 				</div>
-				<!--<div class="row">
-					<div class="sponsor col-4 col-12-mobilep">
-						<a href="https://www.facebook.com/beepinfo/" target="_blank"><img class="image fit"
-								src="images/logo_beep.png"></a>
-					</div>
-					<div class="sponsor col-4 col-12-mobilep">
-						<a href="https://www.memory-srl.com.ar/" target="_blank"><img class="image fit"
-								src="images/logo_memory.png"></a>
-					</div>
+				<div class="row">
 					<div class="sponsor col-4 col-12-mobilep">
 						<a href="https://www.instagram.com/tecnosoft.computacion.s.fco" target="_blank"><img
 								class="image fit" src="images/logo_tecnosoft.jpg"></a>
 					</div>
+					<div class="sponsor col-4 col-12-mobilep">
+						<a href="https://www.facebook.com/beepinfo/" target="_blank"><img class="image fit"
+								src="images/logo_beep.png"></a>
+					</div>
+
+					<div class="sponsor col-4 col-12-mobilep">
+						<a href="https://www.facebook.com/ITech3D-San-Francisco-194145871243918/" target="_blank"><img class="image fit"
+								src="images/logo_itech3d.png"></a>
+					</div>
+
 				</div>
 
 				<div class="row">
-					<div class="sponsor col-4 col-12-mobilep">
-						<a href=""><img class="image fit" src="images/steel_logo_small.png"></a>
+						<div class="sponsor col-4 col-12-mobilep">
+							
+						</div>
+	
+						<div class="sponsor col-4 col-12-mobilep">
+							<a href="https://www.facebook.com/pg/Evolución-Tienda-Informática-1062173550526543" target="_blank"><img class="image fit"
+									src="images/logo_evolucion.jpg"></a>
+						</div>
+						<div class="sponsor col-4 col-12-mobilep">
+							
+						</div>
+	
 					</div>
-					<div class="sponsor col-4 col-12-mobilep">
-						<a href="https://www.facebook.com/burencomputacion/" target="_blank"><img class="image fit"
-								src="images/buren.png"></a>
-					</div>
-					<div class="sponsor col-4 col-12-mobilep">
 
-					</div>
-				</div>
-			-->
+			
 
 
 			</section>
