--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
 
 					<div class="row">
 						<div class="sponsor col-4 col-12-mobilep">
-							
+							<a href="https://www.facebook.com/setecocomputacion/" target="_blank"><img
+								class="image fit" src="images/logo_seteco.png"></a>
 						</div>
 	
 						<div class="sponsor col-4 col-12-mobilep">
