--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 												<li><a style="font-size: 14px;" target="_blank" href="https://www.urionlinejudge.com.br/judge/es/users/contest/464">Universitario - Ingeniería</a></li>
 										</ul>
 									</li>
-									<li><a href="#">Fotos</a></li>
+									<li><a target="_blank" href="https://photos.app.goo.gl/MBpAX45FW7LyerWH6">Fotos</a></li>
 								</ul>
 							</li>
 							<!--
@@ -171,6 +171,33 @@
 
 					</div>
 				</div>
+				<!--
+				<div class="row">
+						<div class="col-12 col-12-mobilep">
+							<h3>Acomañan</h3>
+						</div>
+					</div>
+	
+					<div class="row">
+						<div class="col-6 col-12-mobilep">
+	
+	
+							<img class="image fit" src="images/sfco.png"
+								style="max-height: 180px; width: auto; margin: auto; margin-bottom: 50px;">
+	
+						</div>
+	
+						<div class="col-6 col-12-mobilep">
+	
+	
+							<img class="image fit" src="images/UTN-SAN-FRANCISCO.png"
+								style="max-height: 200px; width: auto; margin: auto; margin-bottom: 50px;">
+	
+	
+	
+						</div>
+					</div>
+				-->
 				<div class="row">
 					<div class="col-12 col-12-mobilep">
 						<h3>Sponsors</h3>
