--- a/index.html
+++ b/index.html
@@ -55,6 +55,26 @@
 									<li><a target="_blank" href="https://photos.app.goo.gl/MBpAX45FW7LyerWH6">Fotos</a></li>
 								</ul>
 							</li>
+
+							<li>
+									<a href="#" class="icon fa-angle-down">2018</a>
+									<ul>
+										<li><a href="#">Problemas</a>
+											<ul >
+												<li><a style="font-size: 14px;" target="_blank" href="assets/2018/Problemset 2018 [Cat. A].pdf">Cat. A</a></li>
+												<li><a style="font-size: 14px;" target="_blank" href="assets/2018/Problemset 2018 [Cat. B].pdf">Cat. B</a></li>
+											</ul>
+										</li>
+										<!--li><a href="#">Análisis de los problemas</a></li-->
+										<li><a href="#">Resultados</a>
+											<ul >
+													<li><a style="font-size: 14px;" target="_blank" href="https://www.urionlinejudge.com.br/judge/es/users/contest/408">Cat A.</a></li>
+													<li><a style="font-size: 14px;" target="_blank" href="https://www.urionlinejudge.com.br/judge/es/users/contest/409">Cat B.</a></li>
+											</ul>
+										</li>
+										<li><a target="_blank" href="https://photos.app.goo.gl/vsgtro3yfNSphELJ6">Fotos</a></li>
+									</ul>
+								</li>
 							
 							
 							<li>
